--- a/org/1_overview.org
+++ b/org/1_overview.org
@@ -42,6 +42,16 @@ Lubbert Das/. (Source: Wikipedia)
 - [[https://github.com/birkenkrahe/dsmath/blob/main/org/syllabus.org#dates-and-class-schedule][Schedule]] with dates of tests and assignments
 - The [[https://github.com/birkenkrahe/dsmath][GitHub repo]] contains course material
 
+* Course "learning" platform: Canvas
+
+#+attr_html: :width 500px
+#+caption: Course topics
+[[../img/1_canvas.png]]
+
+- All grades should be visible at all times
+- New system for me & for Lyon: bear with us
+- Control your own notifications (email)
+
 * Course topics (illustrated)
 #+attr_html: :width 400px
 #+caption: xkcd 2652: Proxy Variable (explainxkcd.com, July 29, 2022)
@@ -112,7 +122,7 @@ scientific advances of the Enlightenment." (Source: [[https://en.wikipedia.org/w
 - Prediction: spring '23 course /"Machine learning"/ (DSC 305)
 - Missing (among other things): /measure theory/ (project?)[fn:4]
 
-* Agile team project
+* Agile team project (with "Scrum")
 #+attr_html: :width 600px
 #+caption: Agile (Scrum) project
 [[../img/1_scrum.png]]
@@ -127,6 +137,18 @@ Answered in the [[https://github.com/birkenkrahe/org/blob/master/FAQ.org][FAQ]]:
 *Note:* the first /[[https://github.com/birkenkrahe/org/blob/master/FAQ.org#what-is-a-sprint-review][sprint review]]/ is on September 1st. Use it to present
 your initial results (see FAQ on [[https://github.com/birkenkrahe/org/blob/master/FAQ.org#what-do-i-need-to-deliver-at-a-sprint-review][what to deliver]], and [[https://github.com/birkenkrahe/org/blob/master/FAQ.org#what-should-we-do-in-the-first-sprint][1st sprint
 review]]).
+
+* IMRaD and Scrum
+#+attr_html: :width 600px
+#+caption: Agile (Scrum) project
+[[../img/1_imrad.png]]
+
+- Introduction (research question - what you want to find out)
+- Method (how you want to do it)
+- Results (what you found out)
+- Discussion (what it means)
+
+([[https://youtu.be/dip7UwZ3wUM][Video: Research Writing with IMRaD]])
 
 * Many project opportunities
 
@@ -145,6 +167,20 @@ review]]).
 9. If you can use, topics, experiments etc. from other courses!
 10. Come up with another idea and run it by me!
 
+* Video lectures
+#+attr_html: :width 400px
+#+caption: La lecture Marie Therese (Picasso, 1932)
+[[../img/1_lecture.jpg]]
+
+- [[https://www.youtube.com/playlist?list=PLwgb17bzeNygo8GU6SivwwjsQj9QabqAJ][Emacs + Org-mode + R]] (Tutorial videos Spring '22)
+- [[https://www.youtube.com/playlist?list=PL6SfZh1-kWXkLa45V6JeEhNZEXvsmUR1f][Introduction to R: installation and shell]]
+- Vectors in R ([[https://www.youtube.com/playlist?list=PL6SfZh1-kWXl3_YDc-8SS5EuG4h1aILHz][part 1]], [[https://www.youtube.com/playlist?list=PL6SfZh1-kWXlA2axuHdNMzhwhuEhtGtlK][part 2]], [[https://www.youtube.com/playlist?list=PL6SfZh1-kWXn0PLpr1dB8NQwkDuThwkf5][part 3]])
+- [[https://www.youtube.com/playlist?list=PL6SfZh1-kWXmMY6rKe2dkUUdn41m50-n6][Data frames, matrices, lists, factors in R]]
+- [[https://www.youtube.com/playlist?list=PL6SfZh1-kWXlKpHIv66nOhGAFxztXaCEd][Data frames in R]]
+- [[https://www.youtube.com/playlist?list=PL6SfZh1-kWXkDVwgn2kXG13Y4SnoWDj9q][Base R plotting]]
+- [[https://www.youtube.com/playlist?list=PL6SfZh1-kWXnLB9cVQQKRxtAFFDfyGw0h][Plotting with ggplot2]]
+- [[https://www.youtube.com/playlist?list=PLwgb17bzeNyi9RjO0pL48am-Bk6XWol44][Data import]] with R
+- [[https://www.youtube.com/playlist?list=PL6SfZh1-kWXl3RimChL59F7lKSDGA97AZ][RStudio R Notebooks and literate programming]]
 * Introduction to DataCamp
 #+attr_html: :width 500px
 #+caption: DataCamp course "Introduction to statistics" start page
