--- a/org/1_overview.org
+++ b/org/1_overview.org
@@ -23,7 +23,7 @@ Lubbert Das/. (Source: Wikipedia)
 - Computer science: Linux (bash), Emacs (Lisp), OOP (C++)
 - Data science: R, process mining, medical image recognition
 
-* Mutual introductions
+* DONE Mutual introductions
 #+attr_html: :width 500px
 #+caption: Detail from the Garden of Earthly Delights (Hell) by Bosch (1503)
 [[../img/1_hell.png]]
@@ -32,7 +32,7 @@ Lubbert Das/. (Source: Wikipedia)
 2. What would delight you?
 3. What would disappoint you?
 4. Where are you headed?
-* Course syllabus (on GitHub and on Canvas)
+* DONE Course syllabus (on GitHub and on Canvas)
 #+attr_html: :width 500px
 #+caption: DSC 302 Syllabus on GitHub
 [[../img/1_syllabus.png]]
@@ -41,28 +41,30 @@ Lubbert Das/. (Source: Wikipedia)
 - Course information (grading, attendance)
 - [[https://github.com/birkenkrahe/dsmath/blob/main/org/syllabus.org#dates-and-class-schedule][Schedule]] with dates of tests and assignments
 - The [[https://github.com/birkenkrahe/dsmath][GitHub repo]] contains course material
+- Lecture /notes/ (from Emacs Org-mode) will not show in GitHub
 
-* Course "learning" platform: Canvas
+* TODO Course "learning" platform: Canvas
 
 #+attr_html: :width 500px
 #+caption: Course topics
 [[../img/1_canvas.png]]
 
-- All grades should be visible at all times
-- New system for me & for Lyon: bear with us
-- Control your own notifications (email)
+- All [[https://lyon.instructure.com/courses/655/grades][grades]] should be visible at all times
+- Control your own [[https://lyon.instructure.com/courses/655?view=notifications][notifications]] (email)
+- Important course [[https://lyon.instructure.com/courses/655/pages/links][links]] on a page
+- New CMS[fn:5] for me & for Lyon: bear with us
 
-* Course topics (illustrated)
+* TODO Course topics (illustrated)
 #+attr_html: :width 400px
 #+caption: xkcd 2652: Proxy Variable (explainxkcd.com, July 29, 2022)
 [[../img/1_xkcd_proxy_variable.png]]
 
 #+begin_notes
-Title: 'Our work has produced great answers. Now someone just needs to
-figure out which questions they go with."  In statistics, a proxy
-variable is used as a stand-in for one or more other variables that
-are difficult to measure. In order to be useful as such, proxy
-variables must be correlated with what they are intended to
+Cartoon title: 'Our work has produced great answers. Now someone just
+needs to figure out which questions they go with.' - "In statistics, a
+/proxy variable/ is used as a stand-in for one or more other variables
+that are difficult to measure. In order to be useful as such, proxy
+variables must be /correlated/ with what they are intended to
 represent. For example, a drug might aim to reduce deaths from a
 slow-acting disease. But testing if it reduces deaths might take many
 years, so researchers might test for a proxy outcome instead, like
@@ -70,16 +72,17 @@ whether it results in loss of bone density or damage to
 cells. Physicians use blood pressure as one of many proxies for
 cardiovascular health. Source: [[https://www.explainxkcd.com/wiki/index.php/2652:_Proxy_Variable][explanation]] (July 29, 2022)
 #+end_notes
-* Course topics (spelled out)
+* TODO Course topics (spelled out)
 #+attr_html: :width 500px
 #+caption: Pablo Picasso, Guernica (1937), grayscale painting
 [[../img/1_guernica.png]]
 
-1) Elementary statistics
-2) Basic data visualization
-3) Probability
-4) Distributions
-5) Linear regression
+1) Elementary /statistics/
+2) Basic data /visualization/
+3) /Probability/
+4) /Distributions/
+5) /Linear regression/
+6) /Logistic regression/
 
 #+begin_notes
 Guernica by Picasso (1937) depics the bombing on the Spanish city of
@@ -88,7 +91,8 @@ cubist-surrealist painting where reality is dissolved in geometric
 patterns and symbols, distorted and disfigured to achieve a heightened
 effect. Our upcoming discussion on the origins of statistics and
 probability will make it clearer why I chose this image to illustrate
-the list of topics.
+the list of topics: The concepts of this course correlated with the
+rise of modernity.
 #+end_notes
 * Why "math for data science"?
 #+attr_html: :width 500px
@@ -122,7 +126,7 @@ scientific advances of the Enlightenment." (Source: [[https://en.wikipedia.org/w
 - Prediction: spring '23 course /"Machine learning"/ (DSC 305)
 - Missing (among other things): /measure theory/ (project?)[fn:4]
 
-* Agile team project (with "Scrum")
+* TODO Agile team project (with "Scrum")
 #+attr_html: :width 600px
 #+caption: Agile (Scrum) project
 [[../img/1_scrum.png]]
@@ -150,7 +154,7 @@ review]]).
 
 ([[https://youtu.be/dip7UwZ3wUM][Video: Research Writing with IMRaD]])
 
-* Many project opportunities
+* TODO Many project opportunities
 
 #+attr_html: :width 200px
 #+caption: DataCamp competition announcement
@@ -167,7 +171,7 @@ review]]).
 9. If you can use, topics, experiments etc. from other courses!
 10. Come up with another idea and run it by me!
 
-* Video lectures
+* TODO Video lectures
 #+attr_html: :width 400px
 #+caption: La lecture Marie Therese (Picasso, 1932)
 [[../img/1_lecture.jpg]]
@@ -181,7 +185,7 @@ review]]).
 - [[https://www.youtube.com/playlist?list=PL6SfZh1-kWXnLB9cVQQKRxtAFFDfyGw0h][Plotting with ggplot2]]
 - [[https://www.youtube.com/playlist?list=PLwgb17bzeNyi9RjO0pL48am-Bk6XWol44][Data import]] with R
 - [[https://www.youtube.com/playlist?list=PL6SfZh1-kWXl3RimChL59F7lKSDGA97AZ][RStudio R Notebooks and literate programming]]
-* Introduction to DataCamp
+* TODO Introduction to DataCamp
 #+attr_html: :width 500px
 #+caption: DataCamp course "Introduction to statistics" start page
 [[../img/1_datacamp.png]]
@@ -197,7 +201,7 @@ review]]).
 - Complete them on time to get full points
 - Completed DataCamp courses can [[https://www.linkedin.com/in/birkenkrahe/][support your resume]]
 
-* Introduction to the textbook
+* TODO Introduction to the textbook
 #+attr_html: :width 200px
 #+caption: Cover of Book of R (Davies, 2016)
 [[../img/1_bookofR.png]]
@@ -207,7 +211,7 @@ review]]).
 - We will (hopefully) cover most of Part III (ca. 120 p.)
 - You don't have to read along but it might help
 
-* Other sources
+* TODO Other sources
 #+attr_html: :width 150px
 #+caption: Peter Dalgaard, Introductory Statistics with R (2008)
 [[../img/1_dalgaard.png]]
@@ -221,7 +225,7 @@ review]]).
 - Matloff, Probability & statistics for data science (2020) => library
 - Good (free) short online tutorial for R: [[https://github.com/matloff/fasteR][Matloff's "fasteR"]]
 - Beware of ideologies in science(cp. Matloff's "[[http://github.com/matloff/TidyverseSkeptic][TidyverseSceptic]]")
-* Introduction to GNU Emacs + ESS + Org-mode
+* TODO Introduction to GNU Emacs + ESS + Org-mode
 #+attr_html: :width 500px
 #+caption: GNU Emacs start page
 [[../img/1_emacs.png]]
@@ -230,7 +234,7 @@ review]]).
 - Process, file and package management (like an OS)
 - /Literate programming/ environment for 43 languages
 - /IDE/ for R programming and /REPL/ for interactive coding
-* Literate programming
+* TODO Literate programming
 #+attr_html: :width 600px
 #+caption: What is literate programming?
 [[../img/1_litprog.png]]
@@ -240,7 +244,7 @@ Source: "[[https://docs.google.com/presentation/d/1wA7sb41EjV6GP3oBEFsOiYnoe29WI
 - Common practice among data scientists
 - /Paradigm/ behind interactive computing notebooks
 - Useful when learning any programming language
-* Home assignments
+* TODO Home assignments
 
 There are 15 programming assignments altogether = 10 points each, or
 30% of your final grade.
@@ -259,7 +263,7 @@ There are 15 programming assignments altogether = 10 points each, or
    + Mean, median, standard deviation
    + Interpretation of statistical summaries
 
-* Tests (not graded)
+* TODO Tests (not graded)
 #+attr_html: :width 500px
 #+caption: Start page of the entry quiz on Canvas
 [[../img/1_entry_quiz.png]]
@@ -304,6 +308,12 @@ There are 15 programming assignments altogether = 10 points each, or
 - Morin D (2016). Probability For the Enthusiastic Beginner. [[https://scholar.harvard.edu/david-morin/probability][Harvard]].
 
 * Footnotes
+
+[fn:5]CMS = Content Management System; these are the most common
+systems in business applications - present whenever people create
+'content' of any sort (documents e.g.) and need to store it for
+later. CMS systems rely on database technology. In the case of Canvas,
+that's MySQL.
 
 [fn:4]A measure assigns a probability to sets of events where each
 individual event has zero probability so that expectations for
