--- a/org/1_practice.org
+++ b/org/1_practice.org
@@ -1,7 +1,8 @@
 #+TITLE: Practice: Course Infrastructure
-#+AUTHOR: [YourName]
+#+AUTHOR: Marcus Birkenkrahe [pledged]
 #+SUBTITLE: Data visualization (DSC 302) Fall 2022
 #+OPTIONS: toc:nil num:nil ^:nil
+#+startup: overview hideblocks indent inlineimages
 * README
 
   - Practice instructions for data science course infrastructure
@@ -11,19 +12,19 @@
   #+name: tab:3_practice
   | PRACTICE                   | MIN |
   |----------------------------+-----|
-  | Identify yourself          |   5 |
-  | Find GitHub repos          |  10 |
-  | Open the terminal          |   5 |
-  | Open/close R from terminal |  10 |
-  | Emacs tutorial             |  60 |
-  | Open/close R in Emacs      |  15 |
+  | Identify yourself          |   2 |
+  | Find GitHub repos          |   2 |
+  | Open the terminal          |   1 |
+  | Open/close R from terminal |   2 |
+  | Emacs tutorial             |   2 |
+  | Open/close R in Emacs      |   5 |
   | Run R in Org-mode file     |  15 |
-  | Close Emacs/terminal       |   5 |
+  | Close Emacs/terminal       |   1 |
   |----------------------------+-----|
-  | TOTAL                      | 105 |
-  #+TBLFM: @10$2=vsum(@5..@9)
-
-* TODO Identify yourself
+  | TOTAL                      |  30 |
+  #+TBLFM: @10$2=vsum(@2..@9) 
+    
+* Identify yourself
 
   - Update the ~#+AUTHOR:~ information in the header
   - Add this on a line to the header of this file :
@@ -33,7 +34,7 @@
     until you see ~DONE~ instead of ~TODO~ next to the title.
   - Perform this last step each time you complete a section.
 
-* TODO Find the GitHub repos
+* Find the GitHub repos
 
   1) Open any Web browser
   2) Go to the URL https://github.com/birkenkrahe
@@ -42,14 +43,14 @@
   5) Find your course
   6) Check out the sub-directories ~org~ and ~pdf~
 
-* TODO Open the command line terminal
+* Open the command line terminal
 
   1) On Windows, go to the search field and type ~CMD~
   2) Pin the app to the Windows taskbar
   3) On MacOS,
   4) Open the app
 
-* TODO Open/close R from the terminal
+* Open/close R from the terminal
 
   1) In the terminal, after the prompt ~>~, enter the command ~R~
   2) On the R shell, enter the command ~plot(rnorm(1000))~
@@ -58,18 +59,25 @@
   5) The first six lines of a data frame appear in the shell
   6) Enter ~q()~ and confirm with ~n~ to leave the R shell
 
-* TODO Open terminal Emacs
+  #+attr_html: :width 300px
+  [[../img/shell.png]]
+
+* Open terminal Emacs
 
   1) In the terminal, after the prompt, enter the command ~emacs -nw~
   2) The GNU Emacs editor opens inside the terminal
   3) Any time you're stuck in Emacs, type ~C-g~ to quit the command
+  4) Type ~ALT-X emacs-version <ENTER>~ to get the Emacs version number
 
-* TODO Find and open the Emacs tutorial
+  #+attr_html: :width 300px
+  [[../img/emacs.png]]
+     
+* Find and open the Emacs tutorial
 
   1) In Emacs, enter ~C-h t~ by pressing CTRL and h followed by t
   2) The Emacs tutorial appears on the screen
 
-* TODO @home: work through the Emacs tutorial
+* IN PROGRESS @home: work through the Emacs tutorial
 
   1) Complete the tutorial by going through it line by line (ca. 60')
 
@@ -83,9 +91,9 @@
      ~M-x time-stamp~. Save the file with ~C-x C-w~ as a ~.txt~ file and
      submit it in Canvas.
 
-* TODO Open/close R in GUI Emacs
+* Open/close R in GUI Emacs
 
-  1) In the terminal Emacs, enter ~M-x R~
+  1) In the terminal Emacs, enter ~M-x R~ (same as ALT+x R)
   2) When prompted ~R starting project directory?~, press RET
   3) After the ~>~ prompt in the R shell buffer, enter the command:
      ~head(mtcars~). You should see a table in the R shell buffer.
